project: Fix typo, change deb version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ set(LOGPREFIX "OWN3D:")
 # Versioning
 ################################################################################
 
+# also update in bin/make-debian-package
 set(VERSION_MAJOR 1)
 set(VERSION_MINOR 5)
 set(VERSION_PATCH 0)
